--- a/styleCv.css
+++ b/styleCv.css
@@ -1,18 +1,8 @@
 header{
-  height: 200px;
-}
-#img{
-
-}
-h1{
+  height: 380px;
   text-align: center;
-  font-style: color: #172A3A;
+  font-style: bold, color: #172A3A;
   font-size: xx-large;
-}
-h2{
-  text-align: center;
-  font-style: color: #172A3A;
-  font-size: x-large;
 }
 body{
   font-family: arial, impact;
@@ -39,16 +29,67 @@ nav a{
   font-size: 15px;
 }
 a:hover /* Quand on pointe sur un element */{
-background-color: #508991
+  background-color: #508991
 }
 .menu{
   display: table;
   margin: 0 auto;
 }
-footer{
+h2{
+  font-size: x-large;
+  font-weight: bold;
+}
+#pres{
+  float: left;
+  margin-left: 15px;
+}
+.sectionG{
+  float: left;
+  vertical-align: top;
+  margin-left: 180px;
+  margin-top: 0px
+}
+.sectionD{
+  vertical-align: top;
+  margin-left: 300px
+}
+.time{
+  margin-bottom: 20%;
+}
+#section0{
+  float: left;
+  width: 100%;
+  height: auto;
+}
+#section1{
+  float: left;
+  width: 100%;
+  height: auto;
+}
+#expG{
+  margin-botom: 50px;
+}
+#section2{
+  float: left;
+  width: 100%;
+  height: auto;
+}
+#section3{
+  float: left;
+  width: 100%;
+  height: auto;
+}
+#section4{
+  float: left;
+  width: 100%;
+  height: auto;
+}
+#footer{
+  clear: both;
   height: 80px;
+  width: 100%;
   padding-top: 30px;
   text-align: center;
-  background-color: #004346;
+  background: #004346;
   border-top: 2px solid #AAA;
 }
